config: delploy set up

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://anandhu771.github.io/tesla",
+  "homepage": "https://anandhu771.github.io/",
   "name": "tesla",
   "version": "0.1.0",
   "private": true,
